# craftcrest_backend_

./: .gitignore  Dockerfile  Dockerfile.save  README.md  apt.txt  pyproject.toml  render.yaml  requirements.txt  requirements.txt.bak  setup.py  vercel.json
api/: permissions.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
craftcrest/: asgi.py  settings.py  urls.py
orders/: models.py
orders/migrations/: 0001_initial.py  0002_create_artisanuploadimage.py  0002_initial.py  0003_alter_artisanuploadimage_artisan_and_more.py  0003_order_artisan.py  0004_alter_order_artisan.py  0005_alter_customdesignrequest_artisan_and_more.py  0006_order_product.py  0007_customdesignrequest_is_accepted_and_more.py  0008_rename_images_artisanuploadimage_image.py  0009_order_custom_request.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_payment_artisan_alter_payment_order.py
products/migrations/: 0001_initial.py  0002_initial.py
users/: models.py
users/management/commands/: migrate_media_to_cloudinary.py
users/migrations/: 0001_initial.py  0002_alter_user_user_type.py
