[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "craftcrest_backend"
version = "0.0.0"
description = "CraftCrest backend (temporary packaging metadata)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = []